--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- TODO: Sett din egen groupID og artifactID -->
-    <groupId>velg.en.fornuftig.groupID</groupId>
-    <artifactId>CardGame</artifactId>
+    <groupId>no.ntnu.idatg2003</groupId>
+    <artifactId>cardgame</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -15,8 +14,33 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <!-- TODO: Sett dine dependencies for JavaFX og JUnit5-testing -->
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
 
-    <!-- TODO: Sett riktig versjon av nødvendige plugins -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21</version>
+        </dependency>
+    </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>
+                        // TODO: Sett riktig main class
+                    </mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
